# autonomous-o11y-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  ROADMAP.md  agent.py  agent_loop.py  config.py  generate_report.py  generate_value_prop.py  loop.py  main.py  narrator.py  pyproject.toml  state.py
agents/: coordinator.py  db.py  detector.py  governance.py  health.py  instrumentation.py  logs.py  performance.py  rca.py  remediation.py  rum.py  synthetics.py
approval/: __init__.py  workflow.py
deploy/: .env.example  01-setup.sh  02-build.sh  03-deploy-collector.sh  04-deploy-astronomy-shop.sh  05-deploy-agent.sh  06-enable-rum.sh  Dockerfile.agent  Dockerfile.ollama  README.md  auto_labeler.py  backfill_galileo_scores.py  bootstrap.sh  demo-db-degrade.sh  demo-db-restore.sh  demo-degrade.sh  demo-restore.sh  demo-rum-degrade.sh  demo-rum-restore.sh  deploy.sh  docker-compose.yml  eval_set.jsonl  export_full_history.py  generate_pipeline_doc.py  locustfile.py  otelcol-config.yml  otelcol-config.yml.db-degraded  otelcol-config.yml.degraded  pipeline_config.yaml  refresh-aws-creds.sh  run_eval_comparison.py  training_pipeline.py
observability/: __init__.py  self_monitor.py
providers/: __init__.py  base.py  bedrock.py  openai_compat.py
receiver/: fix_generator.py  narrative_generator.py  otlp_receiver.py  profiling_ui.html  source_reader.py
streaming/: __init__.py  alerts.py  attribute_checker.py  cardinality_tracker.py  exception_store.py  log_tracker.py  observations.py  pii_scanner.py  pipeline.py  profiling_store.py  (+2 more)
(+54 files in other folders)
