[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-o11y-agent"
version = "0.1.0"
description = "Autonomous observability agent for Splunk Observability Cloud"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
]

[project.scripts]
o11y-agent = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
